src/codegen/snapshots/hebi__codegen__tests__function_with_default_param.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
fn test(a, b=10):
  print a, b

test(1)
test(1, 2)


# Func:
function `test` (registers: 5, length: 22, constants: 1)
.code
  0  | load r2
  2  | is_none
  3  | jump_if_false 6
  5  | load_smi 10
  7  | store r2
  9  | load r1
  11 | store r3
  13 | load r2
  15 | store r4
  17 | print_n r3, 2
  20 | load_none
  21 | return


function `main` (registers: 4, length: 31, constants: 2)
.code
  0  | make_fn [0]; <function `test` descriptor>
  2  | store_global [1]; test
  4  | load_global [1]; test
  6  | store r1
  8  | load_smi 1
  10 | store r2
  12 | call r1, 1
  15 | load_global [1]; test
  17 | store r1
  19 | load_smi 1
  21 | store r2
  23 | load_smi 2
  25 | store r3
  27 | call r1, 2
  30 | return



